[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
# chrono = "0.4.19"
serde_json = "1.0.81"
home = "0.5.3"
anyhow = "1.0.57"
# serde = { version = "1.0.104", features = ["derive"] }
console = "0.15.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"